# lyrics-on-panel

./: ChangeLog.md  README.md  metadata.json
.github/workflows/: sync-repos.yml  test-arch.yml
backend/: Cargo.toml
backend/src/: lxmusic.rs  lyrics.rs  lyrics_manager.py  main.rs  model.rs  mpris.rs  mpris_player.py  mpris_prober.py  server.py  server.rs
backend/src/test/: test_control.py  test_lyrics_manager.py  test_server.py
contents/config/: config.qml  main.xml
contents/ui/: compatible.qml  configGeneral.qml  main.qml  notification.qml
dms/: plugin.json
dms/contents/config/: config.qml
dms/contents/ui/: configGeneral.qml  main.qml
kde/v1/: metadata.json
kde/v1/contents/config/: main.xml
kde/v2/: metadata.json
kde/v2/contents/config/: main.xml
kde/v2/contents/ui/: configGeneral.qml  main.qml
package/: metadata.json
package/contents/ui/: configGeneral.qml  main.qml  notification.qml
scripts/: install-backend.sh  uninstall-backend.sh
