[package]
name = "lyrics-on-panel-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
lru = "0.16"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "sync", "test-util", "time"] }
url = "2.5"
zbus = { version = "5.0", default-features = false, features = ["tokio"] }
zvariant = "5.0"

[dev-dependencies]
tokio-tungstenite = "0.28"
